css scrollbar firefox fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,6 +320,7 @@ button,
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   overflow-y: scroll;
   overflow: -moz-scrollbars-none;
+  scrollbar-width: none;
   -ms-overflow-style: none;
   position: sticky;
   top: 0px;
@@ -434,6 +435,7 @@ button,
   overflow-y: scroll;
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
+  scrollbar-width: none;
   height: 500px;
   background-color: #fdf0d5;
 }
